--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -1,27 +1,34 @@
 @font-face {
-  font-family: 'BGT';
-  src: url("../fonts/Brandon/BG-Regular.otf");
+  font-family: 'Source Sans Pro';
+  src: url("../fonts/SourceSansPro/SourceSansPro-Light.ttf");
+  font-weight: lighter;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  src: url("../fonts/SourceSansPro/SourceSansPro-Regular.ttf");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'BGT';
-  src: url("../fonts/Brandon/BG-Medium.otf");
+  font-family: 'Source Sans Pro';
+  src: url("../fonts/SourceSansPro/SourceSansPro-SemiBold.ttf");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'BGT';
-  src: url("../fonts/Brandon/BG-Black.otf");
+  font-family: 'Source Sans Pro';
+  src: url("../fonts/SourceSansPro/SourceSansPro-Black.ttf");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'BGT';
-  src: url("../fonts/Brandon/BG-Bold.otf");
+  font-family: 'Source Sans Pro';
+  src: url("../fonts/SourceSansPro/SourceSansPro-Bold.ttf");
   font-weight: 700;
   font-style: normal;
 }
