--- a/assets/css/report.css
+++ b/assets/css/report.css
@@ -31,7 +31,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "BGT", sans-serif;
+  --font-family-sans-serif: ""Source Sans Pro"", sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
 }
 
@@ -63,8 +63,8 @@ section {
 
 body {
   margin: 0;
-  font-family: BGT, sans-serif;
-  font-size: 16px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 15px;
   font-weight: 400;
   line-height: 1.5;
   color: #12263f;
@@ -6089,7 +6089,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: BGT, sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -6212,7 +6212,7 @@ a.close.disabled {
   left: 0;
   z-index: 1060;
   max-width: 10rem;
-  font-family: BGT, sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -14989,7 +14989,8 @@ button:focus {
 }
 
 .header-title {
-  margin-bottom: 0
+  margin-bottom: 0;
+  font-family: "DM Sans";
 }
 
 .header-subtitle {
@@ -15338,7 +15339,7 @@ button:focus {
 }
 
 .ql-container {
-  font-family: BGT, sans-serif
+  font-family: "Source Sans Pro", sans-serif
 }
 
 .ql-toolbar {
